Include SMJ in the other locales

--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -95,6 +95,7 @@
     "en": "English",
     "es": "Español",
     "sw": "Kiswahili",
-    "zh": "中文"
+    "zh": "中文",
+    "smj": "Julevsámegiella"
   }
 }
