--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -97,6 +97,7 @@
         "en": "English",
         "es": "Español",
         "sw": "Kiswahili",
-        "zh": "中文"
+        "zh": "中文",
+        "smj": "Julevsámegiella"
     }
 }
