--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -96,6 +96,7 @@
     "en": "English",
     "es": "Español",
     "sw": "Kiswahili",
-    "zh": "中文"
+    "zh": "中文",
+    "smj": "Julevsámegiella"
   }
 }
