Use native name for each language

--- a/public/locales/smj/translation.json
+++ b/public/locales/smj/translation.json
@@ -106,8 +106,8 @@
     "aboutDataSentence": "Bágo dán spelan li viettjaduvvam dássta <1>{{wordListSource}}</1>. ",
     "aboutOriginalSentence": "Máhtá aj álggospelav spellat <1>dánna</1>",
     "languages": {
-        "en": "Ieŋŋilsgiella",
-        "es": "Spánsska",
+        "en": "English",
+        "es": "Español",
         "sw": "Kiswahili",
         "zh": "中文",
         "smj": "Julevsámegiella"
